--- a/sst-ARIMA.ipynb
+++ b/sst-ARIMA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "17254892",
+   "id": "794a95d2",
    "metadata": {},
    "source": [
     "# Aprendizado de Máquina em Séries Temporais\n",
@@ -935,7 +935,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "deeb4c89",
+   "id": "29a90d78",
    "metadata": {},
    "source": [
     "##### Definindo o horizonte em meses para a predição"
@@ -1047,7 +1047,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f4d027d5",
+   "id": "71a97a4d",
    "metadata": {},
    "source": [
     "#### Criando os datasets de acordo com a janela de treinamento"
@@ -1075,7 +1075,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bb7aa1ac",
+   "id": "d6cf5ccb",
    "metadata": {},
    "source": [
     "### Treino dos modelos para as janelas com os parâmetros otimizados"
@@ -2929,7 +2929,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4ca3de6a",
+   "id": "5daa109f",
    "metadata": {},
    "source": [
     "#### Computando o MAPE: Mean Absolute Percentage Error sobre todas as predições\n",
@@ -2939,7 +2939,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ae7c0fef",
+   "id": "24cf8d90",
    "metadata": {},
    "source": [
     "$MAPE = \\frac{1}{n} \\sum_{t=1}^{n} |\\frac{A_t - F_t}{A_t}|$ $->$ MAPE = Média de (abs((Atual - Forecast)/(Atual))\n",
@@ -2949,7 +2949,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "b8fe5312",
+   "id": "a8db6eeb",
    "metadata": {
     "scrolled": true
    },
@@ -2975,9 +2975,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d4032d69",
+   "metadata": {},
+   "source": [
+    "MAPE quanto menor o valor, melhor"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "7628c082",
+   "id": "baa3ca0b",
    "metadata": {},
    "outputs": [
     {
@@ -2995,7 +3003,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "caa87804",
+   "id": "08b3a1a7",
    "metadata": {
     "scrolled": false
    },
@@ -3014,7 +3022,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ffaf5e74",
+   "id": "3506f63e",
    "metadata": {},
    "source": [
     "### Plotando as predições Versus valor atual para os cinco primeiros meses (t+1,...,t+5)"
@@ -3023,7 +3031,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "40572c55",
+   "id": "f911c1fa",
    "metadata": {},
    "outputs": [
     {
@@ -3119,7 +3127,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4df10d39",
+   "id": "b1b1d5d9",
    "metadata": {},
    "source": [
     "#### Referências"
@@ -3127,7 +3135,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0b829a40",
+   "id": "07fc1cd9",
    "metadata": {},
    "source": [
     "Este projeto é uma adaptação das seguintes referências:\n",
@@ -3145,7 +3153,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "42c97cd6",
+   "id": "cc5b9d3a",
    "metadata": {},
    "outputs": [],
    "source": []
