--- a/sst-ARIMA.ipynb
+++ b/sst-ARIMA.ipynb
@@ -16,6 +16,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "49f8677f",
+   "metadata": {},
+   "source": [
+    "### Introdução\n",
+    "\n",
+    "Modelos SARIMA são modelos da classe de modelos univariados de séries temporais. O acrônimo SARIMA significa modelos AutoRegressivos Integrados de Médias Móveis com Sazonalidade. São modelos bastante úteis para gerar previsão de séries temporais quando, em geral, não estão disponíveis variáveis preditoras. O aspecto mais interessante desse tipo de abordagem é justamente colocar a parte sazonal da série dentro do modelo. [Referência](https://analisemacro.com.br/economia/comentario-de-conjuntura/modelos-sarima/)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "id": "fddd7816",
@@ -477,7 +487,7 @@
    "id": "29ea8e0b",
    "metadata": {},
    "source": [
-    "### Plotando a temperatura de um ponto do dataset atravéz do tempo"
+    "### Plotando a temperatura de um ponto do dataset através do tempo"
    ]
   },
   {
