--- a/source/5_svr.ipynb
+++ b/source/5_svr.ipynb
@@ -2,19 +2,154 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from netuno import SubseriesDTW"
+    "import numpy as np\n",
+    "import netCDF4 as nc\n",
+    "import xarray as xr\n",
+    "import numpy as np\n",
+    "import netCDF4 as nc\n",
+    "from mpl_toolkits.basemap import Basemap\n",
+    "from mpl_toolkits.basemap import shiftgrid\n",
+    "import matplotlib.pyplot as plt\n",
+    "import pandas as pd\n",
+    "from dtw import *\n",
+    "from tqdm import tqdm\n",
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "from netuno import SubseriesDTW, SSTHelper"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "f_inv = lambda x: x + 180\n",
+    "f = lambda x: ((x+180) % 360) - 180"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fp = '../dados/sst.mnmean.nc'\n",
+    "ds = SSTHelper.load_dataset(fp)\n",
+    "df = SSTHelper.load_dataframe(ds)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Obtendo 5 pontos no mar\n",
+    "* Um ponto na região do ENSO;\n",
+    " -> lat = 20°, lon = -132° (https://www.google.com.br/maps/place/20%C2%B000'00.0%22N+132%C2%B000'00.0%22W/@22.1775213,-151.1364928,3.87z/data=!4m4!3m3!8m2!3d20!4d-132?entry=ttu)\n",
+    "\n",
+    "* Um ponto na costa do Chile (Corrente de Humboldt);\n",
+    " -> lat = -22°, lon = -72° (https://www.google.com.br/maps/place/22%C2%B000'00.0%22S+72%C2%B000'00.0%22W/@-21.7898533,-87.474343,4.04z/data=!4m4!3m3!8m2!3d-22!4d-72?entry=ttu)\n",
+    "\n",
+    "* Um ponto no meio do Mediterrâneo;\n",
+    " -> lat = 36°, lon = 18° (https://www.google.com.br/maps/place/36%C2%B000'00.0%22N+18%C2%B000'00.0%22E/@36.0000043,17.9974251,17z/data=!3m1!4b1!4m4!3m3!8m2!3d36!4d18?entry=ttu)\n",
+    "\n",
+    "* Um ponto no meio do Atlântico;\n",
+    " -> lat = 0°, lon = -22° (https://www.google.com.br/maps/place/0%C2%B000'00.0%22N+22%C2%B000'00.0%22W/@-11.0144452,-50.6148726,3z/data=!4m3!3m2!8m1!4d-22?entry=ttu)\n",
+    "\n",
+    "* Um ponto no extremo Índico (ponto de maior latitude, temperaturas mais baixas)\n",
+    " -> lat = -56°, lon = 80° (https://www.google.com.br/maps/place/56%C2%B000'00.0%22S+80%C2%B000'00.0%22E/@-36.027701,54.6888129,3z/data=!4m4!3m3!8m2!3d-56!4d80?entry=ttu)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Initializing\n",
+      "Lat: -22, Lon: 108\n",
+      "Unexpected exception formatting exception. Falling back to standard exception\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Traceback (most recent call last):\n",
+      "  File \"/home/vitor/Documents/sst-time-series-ml/venv/lib/python3.11/site-packages/IPython/core/interactiveshell.py\", line 3548, in run_code\n",
+      "    exec(code_obj, self.user_global_ns, self.user_ns)\n",
+      "  File \"/tmp/ipykernel_7966/3631522059.py\", line 4, in <module>\n",
+      "    chil = SubseriesDTW(df, -22, f_inv(-72), split_date)\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/home/vitor/Documents/sst-time-series-ml/source/netuno/subseries_dtw.py\", line 25, in __init__\n",
+      "    self.df = df\n",
+      "                 \n",
+      "NameError: name 'SSTUtil' is not defined\n",
+      "\n",
+      "During handling of the above exception, another exception occurred:\n",
+      "\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/vitor/Documents/sst-time-series-ml/venv/lib/python3.11/site-packages/IPython/core/interactiveshell.py\", line 2142, in showtraceback\n",
+      "    stb = self.InteractiveTB.structured_traceback(\n",
+      "          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/home/vitor/Documents/sst-time-series-ml/venv/lib/python3.11/site-packages/IPython/core/ultratb.py\", line 1435, in structured_traceback\n",
+      "    return FormattedTB.structured_traceback(\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/home/vitor/Documents/sst-time-series-ml/venv/lib/python3.11/site-packages/IPython/core/ultratb.py\", line 1326, in structured_traceback\n",
+      "    return VerboseTB.structured_traceback(\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/home/vitor/Documents/sst-time-series-ml/venv/lib/python3.11/site-packages/IPython/core/ultratb.py\", line 1173, in structured_traceback\n",
+      "    formatted_exception = self.format_exception_as_a_whole(etype, evalue, etb, number_of_lines_of_context,\n",
+      "                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/home/vitor/Documents/sst-time-series-ml/venv/lib/python3.11/site-packages/IPython/core/ultratb.py\", line 1088, in format_exception_as_a_whole\n",
+      "    frames.append(self.format_record(record))\n",
+      "                  ^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/home/vitor/Documents/sst-time-series-ml/venv/lib/python3.11/site-packages/IPython/core/ultratb.py\", line 970, in format_record\n",
+      "    frame_info.lines, Colors, self.has_colors, lvals\n",
+      "    ^^^^^^^^^^^^^^^^\n",
+      "  File \"/home/vitor/Documents/sst-time-series-ml/venv/lib/python3.11/site-packages/IPython/core/ultratb.py\", line 792, in lines\n",
+      "    return self._sd.lines\n",
+      "           ^^^^^^^^^^^^^^\n",
+      "  File \"/home/vitor/Documents/sst-time-series-ml/venv/lib/python3.11/site-packages/stack_data/utils.py\", line 145, in cached_property_wrapper\n",
+      "    value = obj.__dict__[self.func.__name__] = self.func(obj)\n",
+      "                                               ^^^^^^^^^^^^^^\n",
+      "  File \"/home/vitor/Documents/sst-time-series-ml/venv/lib/python3.11/site-packages/stack_data/core.py\", line 734, in lines\n",
+      "    pieces = self.included_pieces\n",
+      "             ^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/home/vitor/Documents/sst-time-series-ml/venv/lib/python3.11/site-packages/stack_data/utils.py\", line 145, in cached_property_wrapper\n",
+      "    value = obj.__dict__[self.func.__name__] = self.func(obj)\n",
+      "                                               ^^^^^^^^^^^^^^\n",
+      "  File \"/home/vitor/Documents/sst-time-series-ml/venv/lib/python3.11/site-packages/stack_data/core.py\", line 681, in included_pieces\n",
+      "    pos = scope_pieces.index(self.executing_piece)\n",
+      "                             ^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/home/vitor/Documents/sst-time-series-ml/venv/lib/python3.11/site-packages/stack_data/utils.py\", line 145, in cached_property_wrapper\n",
+      "    value = obj.__dict__[self.func.__name__] = self.func(obj)\n",
+      "                                               ^^^^^^^^^^^^^^\n",
+      "  File \"/home/vitor/Documents/sst-time-series-ml/venv/lib/python3.11/site-packages/stack_data/core.py\", line 660, in executing_piece\n",
+      "    return only(\n",
+      "           ^^^^^\n",
+      "  File \"/home/vitor/Documents/sst-time-series-ml/venv/lib/python3.11/site-packages/executing/executing.py\", line 116, in only\n",
+      "    raise NotOneValueFound('Expected one value, found 0')\n",
+      "executing.executing.NotOneValueFound: Expected one value, found 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# enso = SubserieDTW(df, 20, f_inv(-132), 1500, 48)\n",
+    "split_date = '2000-01-01'\n",
+    "\n",
+    "chil = SubseriesDTW(df, -22, f_inv(-72), split_date)\n",
+    "medi = SubseriesDTW(df, 36, f_inv(18), split_date)\n",
+    "atla = SubseriesDTW(df, 0, f_inv(-2), split_date)\n",
+    "\n",
+    "indi = SubseriesDTW(df, -56, f_inv(-80), split_date)\n"
+   ]
   }
  ],
  "metadata": {
