ajuste do nome indice para funcao get_subseries_by_date

--- a/source/2_sarima.ipynb
+++ b/source/2_sarima.ipynb
@@ -22,11 +22,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 38,
    "id": "fddd7816",
    "metadata": {},
    "outputs": [],
    "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
     "from statsmodels.tsa.statespace.sarimax import SARIMAX\n",
     "from sklearn.metrics import mean_squared_error\n",
     "import statsmodels.api as sm\n",
@@ -40,21 +42,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 39,
    "id": "bb0d9441",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Importing the dtw module. When using in academic works please cite:\n",
-      "  T. Giorgino. Computing and Visualizing Dynamic Time Warping Alignments in R: The dtw Package.\n",
-      "  J. Stat. Soft., doi:10.18637/jss.v031.i07.\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from netuno import SSTHelper"
    ]
@@ -374,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 40,
    "id": "53aae388",
    "metadata": {},
    "outputs": [],
@@ -386,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 41,
    "id": "a14ef66e",
    "metadata": {},
    "outputs": [
@@ -494,7 +485,7 @@
        "[1632 rows x 1 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -714,11 +705,171 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 47,
+   "id": "05ce6ed5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sst</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>time</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1990-01-01</th>\n",
+       "      <td>17.547276</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1990-02-01</th>\n",
+       "      <td>16.955896</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1990-03-01</th>\n",
+       "      <td>16.877939</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1990-04-01</th>\n",
+       "      <td>17.275393</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1990-05-01</th>\n",
+       "      <td>19.326475</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  sst\n",
+       "time                 \n",
+       "1990-01-01  17.547276\n",
+       "1990-02-01  16.955896\n",
+       "1990-03-01  16.877939\n",
+       "1990-04-01  17.275393\n",
+       "1990-05-01  19.326475"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_atual = SSTHelper.get_subseries_by_date(teste, '1990-01-01', 5)\n",
+    "\n",
+    "teste.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "376735c5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sst</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>time</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1990-01-01</th>\n",
+       "      <td>17.547276</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1990-02-01</th>\n",
+       "      <td>16.955896</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1990-03-01</th>\n",
+       "      <td>16.877939</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1990-04-01</th>\n",
+       "      <td>17.275393</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1990-05-01</th>\n",
+       "      <td>19.326475</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  sst\n",
+       "time                 \n",
+       "1990-01-01  17.547276\n",
+       "1990-02-01  16.955896\n",
+       "1990-03-01  16.877939\n",
+       "1990-04-01  17.275393\n",
+       "1990-05-01  19.326475"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "teste.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "299399eb",
+   "id": "a88db93a",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#SSTHelper.rmse()"
+   ]
   },
   {
    "cell_type": "markdown",
