feat(root): LSTM implementation and forecasting results and MLP prototype
Signed-off-by: Matheus <matheuscerqueira042@gmail.com>

--- a/sst_mlp.ipynb
+++ b/sst_mlp.ipynb
@@ -34,7 +34,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np\n",
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import torch.nn.functional as F"
+   ]
   },
   {
    "cell_type": "code",
@@ -49,25 +54,47 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Network(nn.Module):\n",
+    "class MLPNetwork():\n",
     "\n",
-    "    def __init__(self):\n",
-    "        # Calls the __init__ dunder method (constructor) from the superclass nn.Module\n",
-    "        super(Network, self).__init__()\n",
-    "        # Creates the network project\n",
-    "        # The problem of interest is an image classification problem (handwritten numbers from 0 to 9)\n",
-    "        # 28x28 pixels images = 724 values\n",
-    "        # Network output = 10 classes\n",
-    "        self.fc1 = nn.Linear(784, 32) # fully conected layer (first dense layer)\n",
-    "        self.fc2 = nn.Linear(32, 10) # fully conected layer (second dense layer)\n",
+    "    def __init__(self, input_dim):\n",
+    "        super(nn.Module, self).__init__()\n",
     "\n",
-    "    def forward(self, X):\n",
-    "        # X is an image 28x28 -> does not work for the conneccted layer, which expects a 1d vector\n",
-    "        # Receives minibatches\n",
-    "        X = torch.flatten(X, 1) # flatten the dimentions with the exception of the batches one\n",
-    "        X = F.relu(self.fc1(X)) # connected linear layer + relu\n",
-    "        X = self.fc2(X) # connected linear layer\n",
-    "        return X"
+    "        self.input_dim = input_dim\n",
+    "\n",
+    "        self.layers = nn.Sequential(\n",
+    "            nn.Linear(self.input_dim, 32),\n",
+    "            F.relu(),\n",
+    "            nn.Linear(32, 32),\n",
+    "            F.relu(),\n",
+    "            nn.Linear(32, 16),\n",
+    "            F.relu(),\n",
+    "            nn.Linear(16, 1)\n",
+    "        )\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        return self.layers(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = MLPNetwork()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Loss Function: Mean Squared Error\n",
+    "lossfunc = nn.MSELoss()\n",
+    "\n",
+    "# SGD = Stochastic Gradient Descent\n",
+    "optimizer = torch.optim.SGD(model.parameters(), lr=1e-3)"
    ]
   },
   {
@@ -76,6 +103,56 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def training_and_evaluate(model, epochs, loss_function, optimizer, X_train, y_train, X_test, verbose=True):\n",
+    "    # A variavel history_train e utilizada para armazenar a perda em cada epoca\n",
+    "    history_train = np.zeros(epochs)\n",
+    "\n",
+    "    # colocar no modelo no tipo treino\n",
+    "    model.train()\n",
+    "\n",
+    "    # o modelo sera treinado utilizando um batch, portanto, ha apenas um \n",
+    "    # laço para iterar as epocas no procedimento de teste \n",
+    "    for epoch in range(epochs):\n",
+    "\n",
+    "        # forward pass\n",
+    "        y_pred = model.forward(X_train)\n",
+    "\n",
+    "        # funcao perda\n",
+    "        loss = loss_function(y_pred, y_train)\n",
+    "\n",
+    "        # o modo verboso imprime a informacao de treinamento\n",
+    "        if verbose:\n",
+    "            print(f\"Epoch [{epoch + 1}|{epochs}] Loss: {loss.item()}\")\n",
+    "\n",
+    "        # inclui a perda da epoca atual no history_train\n",
+    "        history_train[epoch] = loss.item()\n",
+    "\n",
+    "        # limpa o gradiente\n",
+    "        optimizer.zero_grad()\n",
+    "\n",
+    "        # atualiza os parametros\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "\n",
+    "    # coloca o modelo em modo de validacao\n",
+    "    model.eval()\n",
+    "\n",
+    "    # desativa o caluclo do gradiente. isso e util para procedimentos inferenciais.\n",
+    "    # doc.: (https://pytorch.org/docs/stable/generated/torch.no_grad.html)\n",
+    "    with torch.no_grad():\n",
+    "        # realiza predicoes para os conjuntos de treino e de teste\n",
+    "        y_pred_train = model.forward(X_train)\n",
+    "        y_pred_test = model.forward(X_test)\n",
+    "\n",
+    "    return history_train, y_pred_train, y_pred_test"
+   ]
   }
  ],
  "metadata": {
