mais alguns ajustes mínimos

--- a/source/2_sarima.ipynb
+++ b/source/2_sarima.ipynb
@@ -70,13 +70,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "id": "3f945f7a",
    "metadata": {},
    "outputs": [],
    "source": [
     "HORIZONTE = 12 # número de previsões a serem feitas (à frente da data)\n",
-    "AUTO_TUNE = False # se False, não faz a otimização de hiperparâmetros com o auto_arima (demorado)\n",
+    "AUTO_TUNE = True # se False, não faz a otimização de hiperparâmetros com o auto_arima (demorado)\n",
     "DATE_TO_SPLIT = '2021-12-01' #data limite para dividir em treino[:DATA_LIMITE] e teste[DATA_LIMITE:]"
    ]
   },
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "id": "53ebb402",
    "metadata": {},
    "outputs": [
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bbf89b29",
+   "id": "31256dce",
    "metadata": {},
    "source": [
     "#### Plotando para as primeiras leituras"
@@ -397,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "id": "97c5bbb5",
    "metadata": {},
    "outputs": [
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "id": "53aae388",
    "metadata": {},
    "outputs": [],
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "id": "a14ef66e",
    "metadata": {
     "scrolled": false
@@ -476,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "id": "c63a2196",
    "metadata": {
     "scrolled": true
@@ -545,7 +545,7 @@
        "2021-12-01  23.306463"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -564,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "id": "e05899d1",
    "metadata": {},
    "outputs": [
@@ -666,7 +666,7 @@
        "2023-10-01  25.030186"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -680,7 +680,7 @@
    "id": "1a801de5",
    "metadata": {},
    "source": [
-    "### Otimizando os hiper-parâmetros do SARIMA para o conjunto de treino\n",
+    "### Otimizando os hiper-parâmetros do SARIMA para o conjunto de treino do ENSO\n",
     "\n",
     "Os hiperparâmetros `order`$= (p, q, d)$ e `sazonal_order`$=(P, Q, D, m)$ usados para treinar o modelos serão obtido pelo otimizador **auto_arima** do seguinte pacote, https://alkaline-ml.com/pmdarima/\n",
     "\n",
@@ -702,15 +702,82 @@
     "\n",
     " - $m$: o número de passos no tempo para um único período de sazonalidade\n",
     "\n",
-    "#### Auto arima otimizator:\n"
+    "#### Otimizator auto_arima :\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "3f3e6681",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Performing stepwise search to minimize aic\n",
+      " ARIMA(1,1,0)(0,1,1)[24]             : AIC=inf, Time=10.88 sec\n",
+      " ARIMA(0,1,0)(0,1,0)[24]             : AIC=3270.504, Time=0.24 sec\n",
+      " ARIMA(1,1,0)(1,1,0)[24]             : AIC=2709.528, Time=1.25 sec\n",
+      " ARIMA(0,1,0)(0,1,1)[24]             : AIC=inf, Time=6.32 sec\n",
+      " ARIMA(1,1,0)(0,1,0)[24]             : AIC=3257.862, Time=0.27 sec\n",
+      " ARIMA(1,1,0)(2,1,0)[24]             : AIC=2498.145, Time=2.00 sec\n",
+      " ARIMA(1,1,0)(2,1,1)[24]             : AIC=inf, Time=45.01 sec\n",
+      " ARIMA(1,1,0)(1,1,1)[24]             : AIC=inf, Time=17.06 sec\n",
+      " ARIMA(0,1,0)(2,1,0)[24]             : AIC=2514.605, Time=2.05 sec\n",
+      " ARIMA(2,1,0)(2,1,0)[24]             : AIC=2463.490, Time=3.47 sec\n",
+      " ARIMA(2,1,0)(1,1,0)[24]             : AIC=2670.137, Time=1.36 sec\n",
+      " ARIMA(2,1,0)(2,1,1)[24]             : AIC=inf, Time=57.09 sec\n",
+      " ARIMA(2,1,0)(1,1,1)[24]             : AIC=inf, Time=22.32 sec\n",
+      " ARIMA(3,1,0)(2,1,0)[24]             : AIC=2433.030, Time=3.73 sec\n",
+      " ARIMA(3,1,0)(1,1,0)[24]             : AIC=2649.650, Time=1.61 sec\n",
+      " ARIMA(3,1,0)(2,1,1)[24]             : AIC=inf, Time=33.26 sec\n",
+      " ARIMA(3,1,0)(1,1,1)[24]             : AIC=inf, Time=17.52 sec\n",
+      " ARIMA(4,1,0)(2,1,0)[24]             : AIC=2430.312, Time=5.87 sec\n",
+      " ARIMA(4,1,0)(1,1,0)[24]             : AIC=2646.618, Time=2.12 sec\n",
+      " ARIMA(4,1,0)(2,1,1)[24]             : AIC=inf, Time=40.94 sec\n",
+      " ARIMA(4,1,0)(1,1,1)[24]             : AIC=inf, Time=18.25 sec\n",
+      " ARIMA(5,1,0)(2,1,0)[24]             : AIC=2394.374, Time=5.67 sec\n",
+      " ARIMA(5,1,0)(1,1,0)[24]             : AIC=2614.903, Time=2.28 sec\n",
+      " ARIMA(5,1,0)(2,1,1)[24]             : AIC=inf, Time=60.51 sec\n",
+      " ARIMA(5,1,0)(1,1,1)[24]             : AIC=inf, Time=27.69 sec\n",
+      " ARIMA(5,1,0)(2,1,0)[24] intercept   : AIC=2396.374, Time=17.44 sec\n",
+      "\n",
+      "Best model:  ARIMA(5,1,0)(2,1,0)[24]          \n",
+      "Total fit time: 406.273 seconds\n",
+      "2394.3743377065052\n",
+      "                                     SARIMAX Results                                      \n",
+      "==========================================================================================\n",
+      "Dep. Variable:                                  y   No. Observations:                 2016\n",
+      "Model:             SARIMAX(5, 1, 0)x(2, 1, 0, 24)   Log Likelihood               -1189.187\n",
+      "Date:                            Mon, 04 Dec 2023   AIC                           2394.374\n",
+      "Time:                                    01:05:26   BIC                           2439.145\n",
+      "Sample:                                01-01-1854   HQIC                          2410.817\n",
+      "                                     - 12-01-2021                                         \n",
+      "Covariance Type:                              opg                                         \n",
+      "==============================================================================\n",
+      "                 coef    std err          z      P>|z|      [0.025      0.975]\n",
+      "------------------------------------------------------------------------------\n",
+      "ar.L1         -0.1391      0.017     -8.011      0.000      -0.173      -0.105\n",
+      "ar.L2         -0.1745      0.020     -8.517      0.000      -0.215      -0.134\n",
+      "ar.L3         -0.1552      0.021     -7.416      0.000      -0.196      -0.114\n",
+      "ar.L4         -0.0670      0.019     -3.617      0.000      -0.103      -0.031\n",
+      "ar.L5         -0.1376      0.018     -7.679      0.000      -0.173      -0.102\n",
+      "ar.S.L24      -0.6514      0.014    -45.382      0.000      -0.680      -0.623\n",
+      "ar.S.L48      -0.3270      0.016    -21.027      0.000      -0.357      -0.297\n",
+      "sigma2         0.1922      0.004     45.400      0.000       0.184       0.200\n",
+      "===================================================================================\n",
+      "Ljung-Box (L1) (Q):                   0.58   Jarque-Bera (JB):              1717.24\n",
+      "Prob(Q):                              0.45   Prob(JB):                         0.00\n",
+      "Heteroskedasticity (H):               0.58   Skew:                             0.26\n",
+      "Prob(H) (two-sided):                  0.00   Kurtosis:                         7.52\n",
+      "===================================================================================\n",
+      "\n",
+      "Warnings:\n",
+      "[1] Covariance matrix calculated using the outer product of gradients (complex-step).\n"
+     ]
+    }
+   ],
    "source": [
     "# https://alkaline-ml.com/pmdarima/\n",
     "import pmdarima as pm\n",
@@ -741,7 +808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "id": "a222c153",
    "metadata": {},
    "outputs": [],
@@ -770,7 +837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "id": "f34edb43",
    "metadata": {
     "scrolled": true
@@ -869,7 +936,7 @@
        "2022-12-01       22.570385"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -880,7 +947,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2d8eef23",
+   "id": "295f1b90",
    "metadata": {},
    "source": [
     "#### Valores atuais para o horizonte definido (12 meses)"
@@ -888,7 +955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "id": "10ad817c",
    "metadata": {},
    "outputs": [
@@ -990,7 +1057,7 @@
        "2022-12-01  23.302540"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1010,7 +1077,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 19,
    "id": "6d98bf9a",
    "metadata": {},
    "outputs": [
@@ -1020,7 +1087,7 @@
        "0.45786544644015686"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1039,7 +1106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 20,
    "id": "bc415043",
    "metadata": {},
    "outputs": [
@@ -1049,7 +1116,7 @@
        "0.01683551691542555"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1060,7 +1127,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3834485b",
+   "id": "92ddb386",
    "metadata": {},
    "source": [
     "#### Gráfico da predição para o horizonte"
@@ -1068,8 +1135,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "589a4794",
+   "execution_count": 21,
+   "id": "b885585c",
    "metadata": {},
    "outputs": [
     {
@@ -1115,7 +1182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 22,
    "id": "d0da1f26",
    "metadata": {},
    "outputs": [],
@@ -1140,7 +1207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 23,
    "id": "792bc259",
    "metadata": {},
    "outputs": [
@@ -1169,7 +1236,7 @@
        "Name: sst, Length: 96, dtype: float32"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1192,8 +1259,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "b9ffd1b5",
+   "execution_count": 24,
+   "id": "b25cc3e1",
    "metadata": {},
    "outputs": [
     {
@@ -1453,7 +1520,7 @@
        "2022-11-01  22.074417  22.585289  22.950830  24.066349  24.897844  25.030186  "
       ]
      },
-     "execution_count": 27,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1473,7 +1540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 25,
    "id": "db7f3da6",
    "metadata": {},
    "outputs": [
@@ -1525,8 +1592,8 @@
       "11 : predicted = [24.3 23.2 22.5 22.3 22.4 22.4 22.8 23.2 23.7 24.6 25.1 24.7]\n",
       "11 : expected  = [23.9 23.3 22.7 22.  22.  21.8 22.1 22.6 23.  24.1 24.9 25. ]\n",
       "----------\n",
-      "CPU times: total: 1min 11s\n",
-      "Wall time: 17.9 s\n"
+      "CPU times: total: 1min 23s\n",
+      "Wall time: 17.6 s\n"
      ]
     }
    ],
@@ -1569,7 +1636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 26,
    "id": "c47eae0f",
    "metadata": {},
    "outputs": [
@@ -1700,7 +1767,7 @@
        "[132 rows x 4 columns]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1735,7 +1802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 27,
    "id": "a8db6eeb",
    "metadata": {
     "scrolled": true
@@ -1747,7 +1814,7 @@
        "0.0139372031187597"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1761,12 +1828,12 @@
    "id": "3506f63e",
    "metadata": {},
    "source": [
-    "### Plotando as predições Versus valor atual para o horizonte de meses (t, t+1,...,t+11) - para o ENSO"
+    "### Plotando as predições Versus valor atual para o horizonte de meses (t+1,...,t+12) - para o ENSO"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 28,
    "id": "f911c1fa",
    "metadata": {},
    "outputs": [
@@ -1812,7 +1879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 29,
    "id": "9877828a",
    "metadata": {},
    "outputs": [
@@ -1841,7 +1908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 30,
    "id": "9acab9b3",
    "metadata": {},
    "outputs": [
@@ -1863,7 +1930,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2a4ca9d9",
+   "id": "7da775fa",
    "metadata": {},
    "source": [
     "## Anexo:\n",
@@ -1873,8 +1940,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "9cc44c03",
+   "execution_count": 31,
+   "id": "dfd3d8a8",
    "metadata": {
     "scrolled": true
    },
@@ -1896,7 +1963,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "faa4d6ba",
+   "id": "5220d929",
    "metadata": {},
    "source": [
     "#### Dividindo em treino e teste para os outros pontos definidos (chile, mediterrâneo, atlântico, índico)"
@@ -1904,8 +1971,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "d56cbbfd",
+   "execution_count": 32,
+   "id": "41335d06",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1932,7 +1999,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9ed68dae",
+   "id": "40680c7c",
    "metadata": {},
    "source": [
     "#### Treinando os modelos para todos os pontos restantes"
@@ -1940,8 +2007,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "4f3b8cfa",
+   "execution_count": 33,
+   "id": "e1de2be3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1968,7 +2035,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a47408a",
+   "id": "012e5480",
    "metadata": {},
    "source": [
     "#### Pegando as subseries para os pontos"
@@ -1976,8 +2043,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "id": "e2799027",
+   "execution_count": 34,
+   "id": "9e2f7280",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1989,7 +2056,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "61d3b2d7",
+   "id": "87cc1c31",
    "metadata": {},
    "source": [
     "#### Calculando os erros RMSE e MAPE:"
@@ -1997,8 +2064,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "id": "6caa56b3",
+   "execution_count": 35,
+   "id": "4c2eb2a4",
    "metadata": {},
    "outputs": [
     {
@@ -2053,8 +2120,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "id": "80d04854",
+   "execution_count": 36,
+   "id": "4fd69b5b",
    "metadata": {},
    "outputs": [
     {
@@ -2074,8 +2141,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "id": "c6db0ae0",
+   "execution_count": 37,
+   "id": "5783610b",
    "metadata": {},
    "outputs": [
     {
@@ -2095,8 +2162,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "id": "c42ebf57",
+   "execution_count": 38,
+   "id": "38dab21b",
    "metadata": {},
    "outputs": [
     {
@@ -2116,8 +2183,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "id": "f6bf080d",
+   "execution_count": 39,
+   "id": "36ed746b",
    "metadata": {},
    "outputs": [
     {
